fixing layout issues

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -14,6 +14,10 @@
 		font-size: 3.5rem;
 		margin-bottom: 1rem;
 	}
+	@include mixins.set-breakpoint('mobile') {
+		font-size: 3rem;
+		margin-bottom: 0.5rem;
+	}
 }
 
 .text {
@@ -25,5 +29,9 @@
 	}
 	@include mixins.set-breakpoint('tablet') {
 		line-height: 1.9;
+	}
+	@include mixins.set-breakpoint('mobile') {
+		font-size: 1.5rem;
+		line-height: 1.8;
 	}
 }
